// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraggableTreeview renders correctly 1`] = `
<div
  class="v-treeview v-treeview-draggable theme--light"
>
  <div
    class="v-treeview-node v-treeview-node--click "
  >
    <div
      class="v-treeview-node__root"
    >
       
      <i
        class="v-icon notranslate v-treeview-node__toggle v-icon--link mdi theme--light mdi-menu-down"
        role="button"
      />
        
      <div
        class="v-treeview-node__label"
      >
        
        test
      
      </div>
       
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`DraggableTreeview renders correctly 2`] = `
<div
  class="v-treeview v-treeview-draggable theme--light"
>
  <div
    class="v-treeview-node v-treeview-node--click "
  >
    <div
      class="v-treeview-node__root"
    >
       
      <i
        class="v-icon notranslate v-treeview-node__toggle v-icon--link mdi v-treeview-node__toggle--open theme--light mdi-menu-down"
        role="button"
      />
        
      <div
        class="v-treeview-node__label"
      >
        
        test
      
      </div>
       
    </div>
     
    <!---->
     
    <div
      class="v-treeview-node__children v-treeview-node__children__draggable"
    >
      <div>
        <div
          class="v-treeview-node v-treeview-node--click "
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
             
            <i
              class="v-icon notranslate v-treeview-node__toggle v-icon--link mdi theme--light mdi-menu-down"
              role="button"
            />
              
            <div
              class="v-treeview-node__label"
            >
              
        test-children
      
            </div>
             
          </div>
           
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DraggableTreeview renders correctly with divider and changed expand Icon 1`] = `
<div
  class="v-treeview v-treeview-draggable theme--light"
>
  <div
    class="v-treeview-node v-treeview-node--click "
  >
    <div
      class="v-treeview-node__root"
    >
       
      <i
        class="v-icon notranslate v-treeview-node__toggle v-icon--link mdi theme--light mdi-chevron-down"
        role="button"
      />
        
      <div
        class="v-treeview-node__label"
      >
        
        test
      
      </div>
       
    </div>
     
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
     
    <!---->
  </div>
</div>
`;

exports[`DraggableTreeview renders correctly with divider and changed expand Icon 2`] = `
<div
  class="v-treeview v-treeview-draggable theme--light"
>
  <div
    class="v-treeview-node v-treeview-node--click "
  >
    <div
      class="v-treeview-node__root"
    >
       
      <i
        class="v-icon notranslate v-treeview-node__toggle v-icon--link mdi v-treeview-node__toggle--open theme--light mdi-chevron-down"
        role="button"
      />
        
      <div
        class="v-treeview-node__label"
      >
        
        test
      
      </div>
       
    </div>
     
    <hr
      aria-orientation="horizontal"
      class="v-divider theme--light"
      role="separator"
    />
     
    <div
      class="v-treeview-node__children v-treeview-node__children__draggable"
    >
      <div>
        <div
          class="v-treeview-node v-treeview-node--click "
        >
          <div
            class="v-treeview-node__root"
          >
            <div
              class="v-treeview-node__level"
            />
             
            <i
              class="v-icon notranslate v-treeview-node__toggle v-icon--link mdi theme--light mdi-chevron-down"
              role="button"
            />
              
            <div
              class="v-treeview-node__label"
            >
              
        test-children
      
            </div>
             
          </div>
           
          <hr
            aria-orientation="horizontal"
            class="v-divider theme--light"
            role="separator"
          />
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;
